[workspace]
members = [
    "cadency_core",
    "cadency_codegen",
    "cadency_commands",
    "cadency_yt_playlist",
    "cadency",
    "examples/*"
]
resolver = "2"

[workspace.dependencies]
env_logger = "0.11.8"
log = "0.4.28"
thiserror = "2.0.17"
serde_json = "1.0.145"
derive_builder = "0.20.2"

[workspace.dependencies.serenity]
version = "0.12.4"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "voice", "cache"]

[workspace.dependencies.songbird]
version = "0.5.0"
features = ["builtin-queue"]

[workspace.dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt-multi-thread"]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.reqwest]
version = "0.11.27"
default-features = false
features = ["rustls-tls", "json"]

[workspace.dependencies.symphonia]
version = "0.5.5"
features = ["all-formats"]
