[package]
name = "cadency_codegen"
version = "0.7.1"
edition = "2021"
description = "Library with codegen macros for the cadency discord bot"
license = "MIT"
repository = "https://github.com/BananikXenos/cadency-rs"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.110"
